# CUDA-ray-tracer

./: .gitignore  CMakeLists.txt  Dokumentacja.md  Instrukcja.md  Makefile  README.md  helper_cuda_opengl.h  light.cpp  light.cu  light.h  light_impl.h  ray-tracer.cpp  ray-tracer.frag  scene-exception.cpp  scene.cpp  scene.h  shader-program.cpp  shader-program.h  surface.cpp  surface.cu  surface.h  surface_impl.h  update-cpu.cpp  update-cuda.cu  update.h
include/: helper_cuda_opengl.h  light.h  light_impl.h  scene-exception.h  scene.h  surface.h  surface_impl.h  update.h
presentation/: problem_description.tex
scenes/: 20spheres.yml  cayley.yml  clebsch.yml  cubic.yml  dingdong.yml  monkey_saddle.yml  quadratic.yml  reflection_test.yml
shaders/: CMakeLists.txt  shader-paths.h.in
src/: CMakeLists.txt  ray-tracer.cpp  shader-program.cpp  update-cpu.cpp  update-cuda-par.cu  update-cuda.cu
